[gd_scene load_steps=15 format=3 uid="uid://w0njfm7kqkxj"]

[ext_resource type="Script" path="res://main/player/player/characters/character.gd" id="1_tt74i"]
[ext_resource type="Script" path="res://main/player/player/scripts/movement.gd" id="2_ttr4h"]
[ext_resource type="Script" path="res://main/player/player/scripts/character_stats.gd" id="3_1sd56"]
[ext_resource type="PackedScene" uid="uid://cfqaj6lx1m8av" path="res://main/player/player/scripts/hurtbox/hurtbox.tscn" id="4_p14t4"]
[ext_resource type="Shader" path="res://assets/resources/shader/flash.gdshader" id="5_5y13o"]
[ext_resource type="Texture2D" uid="uid://b3jd4u2qm82ly" path="res://assets/characters/magmaul/walk/Magmaul-walking-sw-01.png" id="6_uyj7f"]
[ext_resource type="Script" path="res://main/player/player/scripts/sprite.gd" id="7_6oiay"]
[ext_resource type="Script" path="res://main/player/player/scripts/detect_enemy_or_ally.gd" id="8_yyb7f"]
[ext_resource type="PackedScene" uid="uid://bs6ncy56q2n34" path="res://main/player/player_gui/player_gui.tscn" id="9_lfgfv"]
[ext_resource type="Script" path="res://main/player/player/scripts/line_of_sight.gd" id="10_cnlkm"]
[ext_resource type="PackedScene" uid="uid://dympouuep62iu" path="res://main/player/player/scripts/ally_navigation_agent/ally_navigation_agent.tscn" id="11_5xq23"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wur2g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wkent"]
shader = ExtResource("5_5y13o")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hb8v3"]
radius = 261.008

[node name="magmaul" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_tt74i")

[node name="movement" type="Node" parent="."]
script = ExtResource("2_ttr4h")

[node name="character_stats" type="Node" parent="."]
script = ExtResource("3_1sd56")
max_speed = 180.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wur2g")

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wkent")
position = Vector2(0, -80)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_uyj7f")
script = ExtResource("7_6oiay")

[node name="Timer" type="Timer" parent="sprite"]
wait_time = 0.1
autostart = true

[node name="detect_enemy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("8_yyb7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_enemy"]
shape = SubResource("CircleShape2D_hb8v3")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="player_gui" parent="Camera2D" instance=ExtResource("9_lfgfv")]

[node name="line_of_sight" type="Node2D" parent="."]
position = Vector2(-1.90707e-07, -16)
script = ExtResource("10_cnlkm")

[node name="Marker2D" type="Marker2D" parent="line_of_sight"]
position = Vector2(35, 0)

[node name="hurtbox" parent="." instance=ExtResource("4_p14t4")]

[node name="attack_progress_bar" parent="hurtbox" index="1"]
offset_top = -170.0
offset_bottom = -122.0

[node name="health_progress_bar" parent="hurtbox" index="2"]
offset_top = -197.0
offset_bottom = -88.9999

[node name="Label" parent="hurtbox" index="3"]
offset_top = -209.0
offset_bottom = -160.0

[node name="ally_navigation_agent" parent="." instance=ExtResource("11_5xq23")]
follow_position = Vector2(-100, 100)

[connection signal="timeout" from="sprite/Timer" to="sprite" method="_on_timer_timeout"]

[editable path="hurtbox"]
